[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/SoldTransactionView.gd" type="Script" id=1]

[node name="SoldTransactionView" type="Control" groups=[
"Transaction",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -95.9999
margin_bottom = -540.0
rect_min_size = Vector2( 928, 60 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
rect_min_size = Vector2( 928, 60 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 928.0
margin_bottom = 60.0
rect_min_size = Vector2( 928, 60 )

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_right = 928.0
margin_bottom = 4.0
rect_min_size = Vector2( 928, 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 928.0
margin_bottom = 60.0
rect_min_size = Vector2( 928, 52 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlankSpace" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 52.0
rect_min_size = Vector2( 16, 52 )

[node name="SelectedTrans" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 52 )
focus_mode = 0
enabled_focus_mode = 0
align = 1

[node name="DateSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 156.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "02/17/2021"
align = 1
valign = 1
autowrap = true

[node name="NumberOfCoins" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer" groups=[
"NumberOfCoins-Trans",
]]
margin_left = 160.0
margin_right = 299.0
margin_bottom = 52.0
rect_min_size = Vector2( 139, 52 )
text = "0.001920220"
align = 1
valign = 1
autowrap = true

[node name="ExchangePaid" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 303.0
margin_right = 403.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$52,077.37"
align = 1
valign = 1
autowrap = true

[node name="TotalPaid" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 507.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$100"
align = 1
valign = 1
autowrap = true

[node name="ExchangeSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 511.0
margin_right = 611.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$53,077.37"
align = 1
valign = 1
autowrap = true

[node name="TotalSold" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 615.0
margin_right = 715.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$75"
align = 1
valign = 1
autowrap = true

[node name="TotalGains" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 719.0
margin_right = 819.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "$75"
align = 1
valign = 1
autowrap = true

[node name="PercentGains" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 823.0
margin_right = 923.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
text = "100.03%"
align = 1
valign = 1
autowrap = true
